tests/snapshots/cli__gen_bin@print__print-10.my.snap
---
source: tests/cli.rs
info:
  program: print-10.my.out
  args: []
input_file: tests/input/print/print-10.my
---
success: true
exit_code: 0
----- stdout -----
10

----- stderr -----
