tests/snapshots/cli__gen_bin@print__print-num-var.my.snap
---
source: tests/cli.rs
info:
  program: print-num-var.my.out
  args: []
input_file: tests/input/print/print-num-var.my
---
success: true
exit_code: 0
----- stdout -----
10

----- stderr -----
