tests/snapshots/cli__gen_bin@print__print-str-var.my.snap
---
source: tests/cli.rs
info:
  program: print-str-var.my.out
  args: []
input_file: tests/input/print/print-str-var.my
---
success: true
exit_code: 0
----- stdout -----
hello world

----- stderr -----
